# adam

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Dockerfile  README.md  adam.yml  openocd_hs2.cfg  readme.md  requirements.txt  setup.bash
HAL/inc/: gpio.h  uart.h  utils.h
HAL/src/: gpio.c  print.c  spi.c  timer.c
bhv/: adam_clk_div_tb.sv  adam_clk_gate.sv  adam_clk_rst_bhv.sv  adam_pause_bhv.sv  adam_seq_bhv.sv  adam_tb.sv  axi_lite_xbar_perf_tb.sv  simple_clk_div_tb.sv
bhv/axil/: adam_axil_apb_bridge_tb.sv  adam_axil_fall_through_tb.sv  adam_axil_master_bhv.sv  adam_axil_mst_bhv.sv  adam_axil_pause_tb.sv  adam_axil_ram_tb.sv  adam_axil_skid_tb.sv  adam_axil_slave_bhv.sv  adam_axil_slave_simple_bhv.sv  adam_axil_slv_bhv.sv  adam_axil_slv_simple_bhv.sv  adam_axil_xbar_tb.sv
bhv/debug/: adam_debug_jtag_bhv.sv
bhv/fabric/: adam_fabric_hsdom_tb.sv  adam_fabric_lsdom_tb.sv  adam_fabric_lspx_tb.sv  adam_fabric_lsxp_tb.sv  adam_fabric_tb.sv
bhv/jtag/: adam_jtag_mst_bhv.sv
bhv/obi/: adam_obi_from_axil_tb.sv
bhv/pause/: adam_pause_bhv.sv  adam_pause_demux_tb.sv  adam_pause_mux_tb.sv
bhv/periph/: adam_periph_tb.sv
bhv/periph/gpio/: adam_periph_gpio_tb.sv
bhv/periph/spi/: adam_periph_spi_phy_tb.sv  adam_periph_spi_tb.sv
bhv/periph/syscfg/: adam_periph_syscfg_tb.sv  adam_periph_syscfg_tgt_tb.sv  adam_syscfg_tb.sv
bhv/periph/timer/: adam_periph_timer_tb.sv
bhv/periph/uart/: adam_periph_uart_rx_tb.sv  adam_periph_uart_tb.sv  adam_periph_uart_tx_tb.sv
bhv/periphs/: adam_periphs_tb.sv
bhv/periphs/gpio/: adam_periph_gpio_tb.sv
bhv/periphs/spi/: adam_periph_spi_phy_tb.sv  adam_periph_spi_tb.sv
bhv/periphs/sysctrl/: adam_periph_sysctrl_tb.sv
bhv/periphs/timer/: adam_periph_timer_tb.sv
bhv/periphs/uart/: adam_periph_uart_rx_tb.sv  adam_periph_uart_tb.sv  (+1 more)
bhv/stream/: adam_stream_mst_bhv.sv  adam_stream_skid_tb.sv  adam_stream_slv_bhv.sv
bhv/syscfg/: adam_syscfg_tb.sv  adam_syscfg_tgt_tb.sv
bootloader/: Makefile  link.ld
bootloader/inc/: system.h
bootloader/src/: main.c  startup.s
docs/: README.md
docs/source/: activity_pause_protocol.rst  adam.sty  conf.py  debug.rst  getting_started.rst  index.rst  pri_scientific_project_meeting.pptx
examples/coremark/: Makefile  link.ld
fpga/: adam_basys3.sv  adam_basys3.xdc  adam_hawkeye.sv  adam_nexys_video.sv  adam_nexys_video.xdc  adam_zybo.sv  adam_zybo.xdc
hal/inc/: sysctrl.h  types.h
hal/src/: uart.c  utils.c
include/adam/: macros.svh  macros_bhv.svh
powerflow/: readme.md
powerflow/scripts/: parse_csv.py  power.tcl  pp_parser.py  synth.tcl  yaml_parser.py
rtl/: adam.sv  adam_basys3.sv  adam_cfg_pkg.sv  adam_clk_div.sv  adam_mem.sv  adam_nexys_video.sv  adam_synth.sv  adam_synth_intf.sv  adam_syscfg.sv  adam_top.sv  adam_unwrap.sv  adam_wrap.sv
rtl/axil/: adam_axil_apb_bridge.sv  adam_axil_fall_through.sv  adam_axil_offset.sv  adam_axil_pause.sv  adam_axil_ram.sv  adam_axil_skid.sv  adam_axil_to_mem.sv  adam_axil_xbar.sv
rtl/debug/: adam_debug.sv
rtl/fabric/: adam_fabric.sv  adam_fabric_hsclk.sv  adam_fabric_hsdom.sv  adam_fabric_lsdom.sv  adam_fabric_lspx.sv  adam_fabric_lsxp.sv
rtl/intf/: adam_intf_io.sv  adam_intf_jtag.sv  adam_intf_pause.sv  adam_intf_seq.sv  adam_intf_stream.sv
rtl/obi/: adam_obi_axil_bridge.sv  adam_obi_from_axil.sv  adam_obi_to_axil.sv
rtl/pause/: adam_pause_demux.sv  adam_pause_mux.sv
rtl/periph/: adam_periph.sv  adam_periph_hawkeye.sv  adam_periphs.sv
rtl/periphs/: adam_periphs.sv
rtl/stream/: adam_stream_skid.sv
rtl/syscfg/: adam_syscfg.sv  adam_syscfg_tgt.sv
scripts/: adam.py  code_loader.py  docker.bash  flow.py  gen_cfg_pkg.py  gen_pkg.py  gen_ral.py  gen_rom.py  load_bitstream.bash  mem_map_gen.py  rom_gen.py  setup.bash  spike.bash  vivado_flow.py
sim/bhv/: adam_zybo_tb.sv  my_adam_tb.sv  ps_adam_tb.sv
sim/scripts/: adam.makefile  adam_ps.makefile  adam_zybo.makefile  mem_parse.py  yaml_parser.py
sim/wave/: wave_adam_ps.do  wave_adam_zybo.do  wave_my_adam.do  wave_my_adam_cpu.do  wave_my_adam_lpucpu.do
software/: CMakeLists.txt  link.ld
software/biglittle_demo/: Makefile
software/biglittle_demo/inc/: adam_ral.h  bsp.h  system.h
software/biglittle_demo/kissfft/: kiss_fft.c
software/biglittle_demo/kissfft/tools/: kiss_fftr.c  kiss_fftr.h
software/biglittle_demo/src/: bsp.c  main.cpp  printf-stdarg.c  sleep.s  startup.s
software/bootloader/: CMakeLists.txt  link.ld
software/bootloader/inc/: crc32.h  mem_map.h
software/bootloader/src/: crc32.c  main.c  startup.s
software/cmake/: tflm.cmake
software/demo/: Makefile  link.ld
software/demo/inc/: adam_ral.h  system.h
software/demo/src/: main.c  sleep.s  startup.s
software/gemmini-sv/: Makefile
software/gemmini-sv/src/: main.c
software/gemmini_sv/: CMakeLists.txt  Makefile  link.ld
software/gemmini_sv/src/: main.c  startup.s
software/hal/: CMakeLists.txt
software/hal/inc/: adam_ral.h  gpio.h  print.h  spi.h  sysctrl.h  timer.h  uart.h  utils.h
software/hal/src/: gpio.c  print.c  spi.c  timer.c  uart.c  utils.c
software/hawkeye/: CMakeLists.txt  Makefile  link.ld
software/hawkeye/inc/: hawkeye.h  system.h
software/hawkeye/src/: hawkeye.c  main.c
software/hello_world/: CMakeLists.txt  Makefile  link.ld  readme.md
software/hello_world/inc/: adam_ral.h
software/hello_world/src/: main.c  startup.s
software/hello_world_basys3/: Makefile  readme.md
software/hello_world_basys3/inc/: system.h
software/hello_world_basys3/src/: main.c
software/kws/: CMakeLists.txt  link.ld
software/kws/inc/: audio_preprocessor_int8_tflite.h  cfg.h  context.h  hal.h  inference.h  micro_speech_quantized_tflite.h
software/kws/src/: context.c  context.s  crt0.s  deep_sleep.s  inference.cpp  lpcpu_crt0.s  main.c  syscalls.cpp
software/sensemark/: Makefile
software/sensemark/inc/: adam_ral.h  core_portme.h  sensemark.h
software/sensemark/src/: ee_printf.c  main.c  sleep.s
targets/basys3/: adam_basys3.xdc
targets/power/: adam_power.sv  adam_power_intf.sv  adam_power_tb.sv
targets/power_flow/: adam_power_flow.sv
xdc/: adam_nexys_video.xdc
(+88 files in other folders)
